0.9.5: minor fix on proposition edit + prop visibility

--- a/rpgsessions_static/scheduler/css/main.scss
+++ b/rpgsessions_static/scheduler/css/main.scss
@@ -707,6 +707,19 @@ table {
       padding: 2px;
       text-align: center;
 
+      & strong{
+        font-size:1.4em;
+        white-space: break-spaces;
+
+        width:150px;
+        display:block;
+        padding:5px;
+
+        border-radius:5px;
+        margin:auto;
+        text-shadow:0px 0px 5px white;
+      }
+
       &.text {
         text-align: left;
         white-space: pre-line;
